C++ シューティング１「ゲームの骨格」

--- a/appOne/appOne.vcxproj
+++ b/appOne/appOne.vcxproj
@@ -152,8 +152,8 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GAME.cpp" />
     <ClCompile Include="gmain.cpp" />
-    <ClCompile Include="TAKO_C4.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resource.rc" />
@@ -162,7 +162,7 @@
     <None Include="cpp.hint" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="TAKO_C4.h" />
+    <ClInclude Include="GAME.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
