--- a/appOne/appOne.vcxproj.filters
+++ b/appOne/appOne.vcxproj.filters
@@ -19,8 +19,10 @@
   <ItemGroup>
     <ClCompile Include="gmain.cpp" />
     <ClCompile Include="GAME.cpp" />
+    <ClCompile Include="GAME_OBJECT.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GAME.h" />
+    <ClInclude Include="GAME_OBJECT.h" />
   </ItemGroup>
 </Project>
