--- a/appOne/appOne.vcxproj.filters
+++ b/appOne/appOne.vcxproj.filters
@@ -20,9 +20,11 @@
     <ClCompile Include="gmain.cpp" />
     <ClCompile Include="GAME.cpp" />
     <ClCompile Include="GAME_OBJECT.cpp" />
+    <ClCompile Include="SCENE.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GAME.h" />
     <ClInclude Include="GAME_OBJECT.h" />
+    <ClInclude Include="SCENE.h" />
   </ItemGroup>
 </Project>
