C++ シューティング１「ゲームの骨格」 途中

--- a/appOne/appOne.vcxproj.filters
+++ b/appOne/appOne.vcxproj.filters
@@ -21,10 +21,18 @@
     <ClCompile Include="GAME.cpp" />
     <ClCompile Include="GAME_OBJECT.cpp" />
     <ClCompile Include="SCENE.cpp" />
+    <ClCompile Include="TITLE.cpp" />
+    <ClCompile Include="STAGE.cpp" />
+    <ClCompile Include="GAME_CLEAR.cpp" />
+    <ClCompile Include="GAME_OVER.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GAME.h" />
     <ClInclude Include="GAME_OBJECT.h" />
     <ClInclude Include="SCENE.h" />
+    <ClInclude Include="TITLE.h" />
+    <ClInclude Include="STAGE.h" />
+    <ClInclude Include="GAME_CLEAR.h" />
+    <ClInclude Include="GAME_OVER.h" />
   </ItemGroup>
 </Project>
